--- a/BlazorLinuxAdmin/Pages/FileTree.razor
+++ b/BlazorLinuxAdmin/Pages/FileTree.razor
@@ -2,4 +2,4 @@
 
 <h1>FileTree</h1>
 
-<BlazorDomTree TagName="div" OnRootReady="Initialize_bdt_div1" style="padding:10px;border:solid 1px blue;min-height:202px;display:flex;" />
+<BlazorDomTree TagName="div" OnRootReady="Initialize_Bdt_Div1" style="padding:10px;border:solid 1px blue;min-height:202px;display:flex;" />
