--- a/BlazorLinuxAdmin/Impl/Console_ssh.razor
+++ b/BlazorLinuxAdmin/Impl/Console_ssh.razor
@@ -36,7 +36,7 @@
   <br />
   @client.ConnectionInfo.ServerVersion
 </p>
-<BlazorDomTree OnRootReady="bdtready" style="max-width:90%;" />
+<BlazorDomTree OnRootReady="BDTReady" style="max-width:90%;" />
 <hr />
 <div>
   tips
