--- a/BlazorLinuxAdmin/App.razor
+++ b/BlazorLinuxAdmin/App.razor
@@ -1,5 +1,4 @@
-﻿
-@inject BlazorSession bses
+﻿@inject BlazorSession bses
 <BlazorContainer IsShared="true" />
 
 <Router AppAssembly="@typeof(Program).Assembly">
@@ -12,3 +11,5 @@
 		</LayoutView>
 	</NotFound>
 </Router>
+
+<AntContainer />
