--- a/BlazorLinuxAdmin/Pages/TcpMaps.razor
+++ b/BlazorLinuxAdmin/Pages/TcpMaps.razor
@@ -442,19 +442,19 @@ this.setAttribute('href',url);
 					<label>ServerHost</label><InputText @bind-Value="client.ServerHost" />
 				</div>
 				<div>
-					<label>ServerPort</label><InputNumber @bind-Value="client.ServerPort" />
+					<label>ServerPort</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="client.ServerPort" />
 				</div>
 				<div>
 					<label>ClientHost</label><InputText @bind-Value="client.ClientHost" />
 				</div>
 				<div>
-					<label>ClientPort</label><InputNumber @bind-Value="client.ClientPort" />
+					<label>ClientPort</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="client.ClientPort" />
 				</div>
 				<div>
-					<label>Pre-Session</label><InputNumber @bind-Value="client.PreSessionCount" />
+					<label>Pre-Session</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="client.PreSessionCount" />
 				</div>
 				<div>
-					<label>RouterClientPort</label><InputNumber @bind-Value="client.RouterClientPort" />
+					<label>RouterClientPort</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="client.RouterClientPort" />
 				</div>
 				<div class="options">
 					<label><InputCheckbox @bind-Value="client.IsDisabled" />IsDisabled</label>
@@ -547,7 +547,7 @@ this.setAttribute('href',url);
 					<label>ServerBind</label><InputText @bind-Value="server.ServerBind" />
 				</div>
 				<div>
-					<label>ServerPort</label><InputNumber @bind-Value="server.ServerPort" />
+					<label>ServerPort</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="server.ServerPort" />
 				</div>
 				<div>
 					<label>IPServiceUrl</label><InputText @bind-Value="server.IPServiceUrl" style="width:300px" />
@@ -617,13 +617,13 @@ this.setAttribute('href',url);
 					<label>ServerHost</label><InputText @bind-Value="connector.ServerHost" />
 				</div>
 				<div>
-					<label>ServerPort</label><InputNumber @bind-Value="connector.ServerPort" />
+					<label>ServerPort</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="connector.ServerPort" />
 				</div>
 				<div>
 					<label>LocalBind</label><InputText @bind-Value="connector.LocalBind" />
 				</div>
 				<div>
-					<label>LocalPort</label><InputNumber @bind-Value="connector.LocalPort" />
+					<label>LocalPort</label><Microsoft.AspNetCore.Components.Forms.InputNumber @bind-Value="connector.LocalPort" />
 				</div>
 				<div class="options">
 					<label><InputCheckbox @bind-Value="connector.IsDisabled" />IsDisabled</label>
