--- a/BlazorLinuxAdmin/Pages/_Host.cshtml
+++ b/BlazorLinuxAdmin/Pages/_Host.cshtml
@@ -8,13 +8,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazorLinuxAdmin</title>
-    <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
-    <script src="/_blazorplus_handler?action=script" type="text/javascript"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BlazorLinuxAdmin</title>
+  <base href="~/" />
+  <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+  <link href="css/site.css" rel="stylesheet" />
+  <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet">
+  <script src="/_blazorplus_handler?action=script" type="text/javascript"></script>
+  <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
 <body>
 	<div style="opacity:0.0;transition:opacity linear 2s;position:fixed;left:0;top:0;right:0;bottom:0;display:flex;flex-direction:column;align-items:center;justify-content:center;">
