--- a/BlazorLinuxAdmin/_Imports.razor
+++ b/BlazorLinuxAdmin/_Imports.razor
@@ -5,7 +5,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using AntDesign
 @using BlazorLinuxAdmin
 @using BlazorLinuxAdmin.Shared
-
 @using BlazorPlus
