--- a/BlazorLinuxAdmin/_Imports.razor
+++ b/BlazorLinuxAdmin/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.JSInterop
 @using AntDesign
 @using BlazorLinuxAdmin
+@using BlazorLinuxAdmin.Model;
 @using BlazorLinuxAdmin.Shared
 @using BlazorPlus
