--- a/BlazorLinuxAdmin/Pages/_Host.cshtml
+++ b/BlazorLinuxAdmin/Pages/_Host.cshtml
@@ -13,9 +13,10 @@
   <title>BlazorLinuxAdmin</title>
   <base href="~/" />
   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-  <link href="css/site.css" rel="stylesheet" />
   <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet">
   <script src="/_blazorplus_handler?action=script" type="text/javascript"></script>
+  <link href="css/site.css" rel="stylesheet" />
+  <link href="css/default.css" rel="stylesheet" />
   <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
 <body>
