--- a/BlazorLinuxAdmin/Pages/_Host.cshtml
+++ b/BlazorLinuxAdmin/Pages/_Host.cshtml
@@ -17,6 +17,7 @@
   <script src="/_blazorplus_handler?action=script" type="text/javascript"></script>
   <link href="css/site.css" rel="stylesheet" />
   <link href="css/default.css" rel="stylesheet" />
+  <link href="BlazorLinuxAdmin.styles.css" rel="stylesheet" />
   <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
 <body>
