--- a/BlazorLinuxAdmin/Components/FilePreview.razor.less
+++ b/BlazorLinuxAdmin/Components/FilePreview.razor.less
@@ -1,8 +1,12 @@
 ﻿.ant-layout-content {
     overflow-wrap: break-word;
     padding: 20px;
+
+    img {
+        max-width: 100%;
+    }
 }
 
-.ant-layout-header{
-    padding : 0 20px;
+.ant-layout-header {
+    padding: 0 20px;
 }
