--- a/BlazorLinuxAdmin/Pages/FileTree.razor
+++ b/BlazorLinuxAdmin/Pages/FileTree.razor
@@ -18,7 +18,7 @@
     <Layout Class="child-layout">
       @if (this.ActiveFile != null)
       {
-        <FilePreview File="this.ActiveFile" />
+        <FilePreview MyFile="this.ActiveFile" />
       }
     </Layout>
   </Layout>
